add search engine and flights details (sans learned)

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="img/heart.png">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
@@ -43,7 +44,7 @@
             <a href="https://www.linkedin.com/in/idess/">LinkedIn</a>!
           </p>
           <p>
-            Big thanks to <a href="https://www.flaticon.com/authors/flat-icons" target="_blank">Flat Icons</a> for
+            Big thanks to <a href="https://www.flaticon.com/authors/freepik" target="_blank">Freepik</a> for
             my project icons!
           </p>
         </section>
