--- a/projects/rakan.html
+++ b/projects/rakan.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../img/heart.png">
     <link rel="stylesheet" href="../index.css">
     <link rel="stylesheet" href="details.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap">
