about page sticky footer

--- a/projects/rakan.html
+++ b/projects/rakan.html
@@ -105,17 +105,17 @@
           <p>
             First and foremost, I learned to adapt to and appreciate <strong>test-driven
             development</strong>. In my <a href="https://drive.google.com/file/d/1X3VpG_O1En3m-ba6O-dLO1V_paa2MMd-/view?usp=sharing" target="_blank">
-            reflection</a>, I mentioned the back-end bug that caused the beta-release of Rakan to be
-            a failure. I took responsibility for the oversight and strived to fix the bug, which I
+            reflection</a>, I mentioned the back-end bug that caused the beta-release of Rakan to
+            fail. I took responsibility for the oversight and strived to fix the bug, which I
             was able to do so via extensive testing. This made me believe in test-driven development
             and test-driven debugging.
           </p>
           <p>
-            Secondly, I learn to <strong>communicate and collaborate with a large team</strong>
-            efficiently. As the co-founder, I assisted in helping the front-end and back-end
-            communicate both in-person and on code through a RESTful API. I also learned to
-            <strong>collaborate through pair programming</strong> which the back-end team to
-            both ensure my teammate is up to pace and help me think through my code.
+            Secondly, I learned to <strong>communicate and collaborate with a large team</strong>.
+            As the co-founder, I assisted in helping the mini teams communicate both in-person and
+            on code which reinforced my communication skills. I also learned to <strong>collaborate
+            through pair programming</strong> with the back-end team to both ensure my teammate is
+            up to pace and help me think through my code.
           </p>
         </section>
       </section>
