--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>hello world, i am idess</title><style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>hello world, i am idess</title><link rel="icon" 
+  type="image/png" 
+  href="img/icon.svg"><style>
   /* webkit printing magic: print all background colors */
   html {
     -webkit-print-color-adjust: exact;
